--- a/vuepractice/style.css
+++ b/vuepractice/style.css
@@ -9,6 +9,10 @@ body {
     height: 60px;
     margin-bottom: 15px;
   }
+.ti {
+    text-align: center;
+    font-size: 20px;
+  }
 
   .hidden {
     display: none;
